Bug 839956 - Choose SVG text font size scale factor without regard to devPixelsPerPx. r=longsonr